--- a/views/index.erb
+++ b/views/index.erb
@@ -2,6 +2,8 @@
 <html>
   <body>
     <h1>Buster's Best Bowling Alley</h1>
+    <h2>Bet You Can't Bowl A Strike Every Time</h2>
+    
   </body>
   
 </html>
